fix: CSS spacing issue with color-picker control

--- a/inc/customizer/custom-controls/assets/css/unminified/color.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/color.css
@@ -463,7 +463,7 @@
     transform: scale(1.05);
 }
 
-.ast-top-divider.customize-control-ast-color .ast-control-wrap,
+.ast-top-divider.customize-control-ast-color .ast-divider-title + .ast-control-wrap,
 .ast-top-divider.customize-control-ast-color-group .ast-divider-title + .ast-control-wrap {
     margin-top: 25px;
     display: inline-flex;
